# hello_moveit

./: .gitignore
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/hello_moveit/: moveit_client.py
hello_moveit/launch/: base_camera.launch.py  hand_camera.launch.py  ur_moveit.launch.py
hello_moveit/rviz/: view_robot.rviz
hello_moveit/scripts/: moveit_client.py  moveit_client_main.py
hello_moveit/src/: moveit_client.cpp
hello_moveit_msgs/: CMakeLists.txt  package.xml
hello_moveit_msgs/msg/: PlannedPath.msg
hello_moveit_msgs/srv/: ApplyAttachedCollisionObject.srv  CheckCollision.srv  ExecuteTrajectory.srv  GetObjectPoses.srv  GetObjects.srv  PlanExecuteCartesianPath.srv  PlanExecutePoses.srv  PlanPoses.srv
